# ypywidgets-textual

./: README.md  pyproject.toml
ypywidgets_textual/: __init__.py  _driver.py  button.py  plotext.py  switch.py  widget.py
ypywidgets_textual/txl/: button.py  plotext.py  switch.py  widget.py
