[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ypywidgets-textual"
dynamic = ["version"]
description = "Textual widgets for ypywidgets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "widgets",
    "jupyter",
    "ypy",
    "textual",
]
dependencies = [
    "ypywidgets >=0.9.0,<0.10.0",
    "textual >=6.8.0",
    "textual-plotext",
    "pyte",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/ypywidgets-textual"

[tool.hatch.version]
path = "ypywidgets_textual/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ypywidgets_textual",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["ypywidgets_textual"]

[project.entry-points.ypywidgets]
ButtonModel = "ypywidgets_textual.button:ButtonModel"
Button = "ypywidgets_textual.button:Button"
txl_Button = "ypywidgets_textual.txl.button:Button"

SwitchModel = "ypywidgets_textual.switch:SwitchModel"
Switch = "ypywidgets_textual.switch:Switch"
txl_Switch = "ypywidgets_textual.txl.switch:Switch"

PlotextModel = "ypywidgets_textual.plotext:PlotextModel"
Plotext = "ypywidgets_textual.plotext:Plotext"
txl_Plotext = "ypywidgets_textual.txl.plotext:Plotext"

WidgetModel = "ypywidgets_textual.widget:WidgetModel"
Widget = "ypywidgets_textual.widget:Widget"
txl_Widget = "ypywidgets_textual.txl.widget:Widget"
